# Cubed-Sphere-Shallow-Water-Model-A-grid

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.rst  csswm_config.txt  log.txt  plot.sh  run.sh
doc/12:16/Cosine ball/: curvilinear_0.mov  curvilinear_pi:2.mov  curvilinear_pi:4.mov  sphere_0.mov  sphere_pi:2.mov  sphere_pi:4.mov
src/: bp_h.cpp  bp_wind.cpp  constrcution.hpp  construction.cpp  construction.hpp  define.hpp  initialField.cpp  initialField.hpp  iteration.cpp  iteration.hpp  main.cpp  numericalProcess.cpp  outputs.cpp  outputs.hpp  plot.ipynb  plotFunc.py  plotNcFunc.py  plot_h.py  plot_h_wind.py  plot_zeta.py  readConfig.cpp  transform.cpp
